Added modification to solution of problem_182

--- a/python/pandas/03_duplicate_emails_p_182.ipynb
+++ b/python/pandas/03_duplicate_emails_p_182.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -69,18 +69,36 @@
        "      <td>3</td>\n",
        "      <td>a@b.com</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>jacky@yahoo.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>jacky@yahoo.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>jacky@yahoo.com</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   id    email\n",
-       "0   1  a@b.com\n",
-       "1   2  c@d.com\n",
-       "2   3  a@b.com"
+       "   id            email\n",
+       "0   1          a@b.com\n",
+       "1   2          c@d.com\n",
+       "2   3          a@b.com\n",
+       "3   4  jacky@yahoo.com\n",
+       "4   5  jacky@yahoo.com\n",
+       "5   6  jacky@yahoo.com"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +121,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +141,7 @@
        "Index(['id', 'email'], dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,29 +159,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>a@b.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>jacky@yahoo.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>jacky@yahoo.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "2    a@b.com\n",
-       "Name: Email, dtype: object"
+       "   id            email\n",
+       "2   3          a@b.com\n",
+       "4   5  jacky@yahoo.com\n",
+       "5   6  jacky@yahoo.com"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result=person[person.email.duplicated()].email.rename('Email')\n",
+    "result=person[person.email.duplicated()]         #getting duplicates     \n",
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2            a@b.com\n",
+       "4    jacky@yahoo.com\n",
+       "Name: Email, dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result=result.email.drop_duplicates().rename('Email')    #keeping only one record\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -195,16 +281,21 @@
        "      <th>2</th>\n",
        "      <td>a@b.com</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>jacky@yahoo.com</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Email\n",
-       "2  a@b.com"
+       "             Email\n",
+       "2          a@b.com\n",
+       "4  jacky@yahoo.com"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,13 +314,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def duplicate_emails(person: pd.DataFrame) -> pd.DataFrame:\n",
     "    \n",
-    "    return pd.DataFrame(person[person.email.duplicated()].email.rename('Email'))"
+    "    return pd.DataFrame(person[person.email.duplicated()].email.drop_duplicates().rename('Email'))"
    ]
   },
   {
@@ -241,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -282,16 +373,21 @@
        "      <th>2</th>\n",
        "      <td>a@b.com</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>jacky@yahoo.com</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Email\n",
-       "2  a@b.com"
+       "             Email\n",
+       "2          a@b.com\n",
+       "4  jacky@yahoo.com"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
