Updated solutions for problem 176 and 177

--- a/python/pandas/05_second_highest_salary_p_176.ipynb
+++ b/python/pandas/05_second_highest_salary_p_176.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -62,12 +62,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
-       "      <td>200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>300</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -76,18 +71,18 @@
       "text/plain": [
        "   id  salary\n",
        "0   1     100\n",
-       "1   2     200\n",
-       "2   3     300"
+       "1   2     100"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "employee=pd.read_csv('./test_data/employee_test1_p176.csv',delimiter='|')\n",
+    "# employee=pd.read_csv('./test_data/employee_test1_p176.csv',delimiter='|')\n",
     "# employee=pd.read_csv('./test_data/employee_test2_p176.csv',delimiter='|')\n",
+    "employee=pd.read_csv('./test_data/employee_test3_p176.csv',delimiter='|')\n",
     "employee"
    ]
   },
@@ -142,26 +137,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   salary\n",
+       "0     100"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "employee=employee.sort_values(by='salary',ascending=False).reset_index(drop=True)   #descending sorting and reseting index so that our result can be found in 2nd index"
+    "employee=employee.drop(columns=['id']).drop_duplicates()  #removing duplicates\n",
+    "employee"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   salary\n",
+       "0     100"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "employee=employee.sort_values(by='salary',ascending=False).reset_index(drop=True)   #descending sorting and reseting index so that our result can be found in 2nd index\n",
+    "employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    200\n",
-       "Name: SecondHighestSalary, dtype: int64"
+       "Series([], Name: SecondHighestSalary, dtype: int64)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,16 +265,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "0"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -243,8 +335,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>200</td>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -252,10 +344,10 @@
       ],
       "text/plain": [
        "   SecondHighestSalary\n",
-       "1                  200"
+       "0                  NaN"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +373,7 @@
     "import numpy as np\n",
     "\n",
     "def second_highest_salary(employee: pd.DataFrame) -> pd.DataFrame:\n",
+    "    employee=employee.drop(columns=['id']).drop_duplicates()  #removing duplicates\n",
     "    employee=employee.sort_values(by='salary',ascending=False).reset_index(drop=True)   #descending sorting and reseting index so that our result can be found in 2nd index\n",
     "    result=employee[employee.index==1].salary.rename('SecondHighestSalary')    #getting 2nd index\n",
     "    \n",
@@ -299,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +435,7 @@
        "0   1     100"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,12 +443,13 @@
    "source": [
     "# employee=pd.read_csv('./test_data/employee_test1_p176.csv',delimiter='|')\n",
     "employee=pd.read_csv('./test_data/employee_test2_p176.csv',delimiter='|')\n",
+    "# employee=pd.read_csv('./test_data/employee_test3_p176.csv',delimiter='|')\n",
     "employee"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +490,7 @@
        "0                  NaN"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
