--- a/python/pandas/06_nth_highest_salary_p_177.ipynb
+++ b/python/pandas/06_nth_highest_salary_p_177.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,29 +59,36 @@
        "      <td>1</td>\n",
        "      <td>100</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   id  salary\n",
-       "0   1     100"
+       "0   1     100\n",
+       "1   2     100"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# employee=pd.read_csv('./test_data/employee_test1_p176.csv',delimiter='|')\n",
-    "employee=pd.read_csv('./test_data/employee_test2_p176.csv',delimiter='|')\n",
+    "# employee=pd.read_csv('./test_data/employee_test2_p176.csv',delimiter='|')\n",
+    "employee=pd.read_csv('./test_data/employee_test3_p176.csv',delimiter='|')\n",
     "employee"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +99,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +119,7 @@
        "Index(['id', 'salary'], dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +137,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   salary\n",
+       "0     100"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee=employee.drop(columns=['id']).drop_duplicates()  #removing duplicates\n",
+    "employee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +208,7 @@
        "Series([], Name: getNthHighestSalary(2), dtype: int64)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +230,7 @@
        "0"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +303,7 @@
        "0                     NaN"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,6 +329,7 @@
     "import numpy as np\n",
     "\n",
     "def nth_highest_salary(employee: pd.DataFrame, N: int) -> pd.DataFrame:\n",
+    "    employee=employee.drop(columns=['id']).drop_duplicates()  #removing duplicates\n",
     "    employee=employee.sort_values(by='salary',ascending=False).reset_index(drop=True)   #descending sorting and reseting index so that our result can be found in n-1th index. Ex: 2nd highest salary will be found in 1st index\n",
     "    result=employee[employee.index==N-1].salary.rename(f'getNthHighestSalary({N})')    #getting n-1th index\n",
     "    \n",
@@ -287,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -321,29 +382,42 @@
        "      <td>1</td>\n",
        "      <td>100</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   id  salary\n",
-       "0   1     100"
+       "0   1     100\n",
+       "1   2     200\n",
+       "2   3     300"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# employee=pd.read_csv('./test_data/employee_test1_p176.csv',delimiter='|')\n",
-    "employee=pd.read_csv('./test_data/employee_test2_p176.csv',delimiter='|')\n",
+    "employee=pd.read_csv('./test_data/employee_test1_p176.csv',delimiter='|')\n",
+    "# employee=pd.read_csv('./test_data/employee_test2_p176.csv',delimiter='|')\n",
+    "# employee=pd.read_csv('./test_data/employee_test3_p176.csv',delimiter='|')\n",
     "employee"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -372,8 +446,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>1</th>\n",
+       "      <td>200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -381,10 +455,10 @@
       ],
       "text/plain": [
        "   getNthHighestSalary(2)\n",
-       "0                     NaN"
+       "1                     200"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,6 +466,13 @@
    "source": [
     "nth_highest_salary(employee=employee,N=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
